completed the article, removed OL css which was causing visible issue

--- a/files/base.css
+++ b/files/base.css
@@ -76,8 +76,3 @@ li {
   margin-left: 0;
   padding-left: 0;
 }
-ol{
-  margin-left: 0;
-  padding-left: 4em;
-  padding: 1rem;
-}
